--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <div id="chat-screen" style="display:none;">
     <div id="chat-header">
       <label for="profile-pic-input">
-        <img id="profile-pic" src="/default-pic.png" alt="Your Profile">
+        <img id="profile-pic" src="/ravmon.jpg" alt="Your Profile">
       </label>
       <input type="file" id="profile-pic-input" accept="image/*">
       <div>
