--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 <body>
   <div id="login-screen">
     <h1>Rav & Mon's Romance</h1>
-    <button onclick="login('Rav')">Login as Rav</button>
-    <button onclick="login('Mon')">Login as Mon</button>
+    <button onclick="login('')">Login as </button>
+    <button onclick="login('')">Login as </button>
   </div>
   <div id="chat-screen" style="display:none;">
     <div id="chat-header">
@@ -51,6 +51,6 @@
     <button id="accept-call-btn">Accept</button>
     <button id="reject-call-btn">Reject</button>
   </div>
-  <script src="/script.js"></script>
+  <script src="/script."></script>
 </body>
 </html>
