--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html
+<html lang="en"
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -12,9 +12,9 @@
 </head>
 <body>
   <div id="login-screen">
-    <h1>Rav & Mon's Romance</h1>
-    <button onclick="login('')">Login as </button>
-    <button onclick="login('')">Login as </button>
+    <h1></h1>
+    <button onclick="login('')">as </button>
+    <button onclick="login('')">as </button>
   </div>
   <div id="chat-screen" style="display:none;">
     <div id="chat-header">
@@ -51,6 +51,6 @@
     <button id="accept-call-btn">Accept</button>
     <button id="reject-call-btn">Reject</button>
   </div>
-  <script src="/script."></script>
+  <script src="/script."></scrip
 </body>
-</html>
+</html
