--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 <body>
   <div id="login-screen">
     <h1></h1>
-    <button onclick="login('Rav')">Login as Rav </button>
-    <button onclick="login('Mon')">Login as Mon </button>
+    <button onclick="login('')">Login as Rav </button>
+    <button onclick="login('')">Login as Mon </button>
   </div>
   <div id="chat-screen" style="display:none;">
     <div id="chat-header">
