--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <div id="login-screen">
-    <h1></h1>
-    <button onclick="login('')">Login as Rav </button>
-    <button onclick="login('')">Login as Mon </button>
+    <h1> Rav & Mon Romance</h1>
+    <button onclick="login('Rav')">Login as Rav </button>
+    <button onclick="login('Mon')">Login as Mon </button>
   </div>
   <div id="chat-screen" style="display:none;">
     <div id="chat-header">
@@ -51,6 +51,6 @@
     <button id="accept-call-btn">Accept</button>
     <button id="reject-call-btn">Reject</button>
   </div>
-  <script src="/script."></script>
+  <script src="/script.js"></script>
 </body>
 </html>
