--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>Rav & Mon's Romantic Chat</title>
+  <title></title>
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" href="/favicon.ico">
   <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
